client/components/LanguageDropdown/LanguageDropdown.module.css
.languageDropdown {
  position: fixed;
  z-index: 2;
  top: 55px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  background-color: white;
  border: 1px solid #ccc;
  border-radius: 10px;
  padding: 10px;
}

.languagesInput {
  margin-right: 10px;
}

